<resources>

    <!--Core App-->
    <string name="app_name">Smart Treatment Calendar</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="intro">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>



    <!--Login-->
    <string name="login_email_example">example@mail.com</string>
    <string name="login_screen_title">Welcome!</string>

    <!-- Register-->
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_gtid">GTID</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_screen_title">Welcome!</string>

    <!--Calendar-->
    <string name="calendar_add_event">Add Event</string>
    <string name="calendar_update_event">Update Event</string>
    <string name="calendar_month">Month</string>
    <string name="calendar_week">Week</string>
    <string name="calendar_day">Day</string>

    <!--Event-->
    <string name="event_name_header">Event Name</string>
    <string name="event_start_day_header">Start Day</string>
    <string name="event_end_day_header">End Day</string>
    <string name="event_start_time_header">Start Time</string>
    <string name="event_end_time_header">End Time</string>
    <string name="event_type_header">Type</string>
    <string name="event_empty_list">No Events Available for Display</string>
    <string-array name="event_types">
        <item>Appointment</item>
        <item>Sport</item>
    </string-array>

    <!--DetailedEvent-->
    <string name="detailed_event_update_button">Update</string>
    <string name="detailed_event_delete_button">Delete</string>
    <string name="detailed_event_dismiss_button">Dismiss</string>
    <string name="detailed_event_from">From:</string>
    <string name="detailed_event_to">To:</string>

    <!--Drawer-->
    <string name="drawer_account">Account</string>
    <string name="drawer_filter">Filter</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_menu_account">Account Settings</string>
    <string name="drawer_menu_calendar">Calendar Settings</string>


    <!--Filter-->
    <string name="filter_appointment">Appointment</string>
    <string name="filter_sport">Sport</string>
    <string name="filter_none">None</string>
    <string name="filter_dialog_title">Filter By:</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
