<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reg_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/login_screen_title_spacing"
            android:layout_marginBottom="@dimen/login_screen_title_spacing"
            android:text="@string/login_screen_title" />

        <TextView
            android:id="@+id/reg_first_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_first_name" />

        <EditText
            android:id="@+id/reg_first_name_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
        android:id="@+id/reg_last_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_last_name" />

        <EditText
            android:id="@+id/reg_last_name_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:id="@+id/reg_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/reg_email_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/reg_gtid_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_gtid" />

        <EditText
            android:id="@+id/reg_gtid_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/reg_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/reg_password_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reg_confirm_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_confirm_password" />

        <EditText
            android:id="@+id/reg_confirm_password_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buzz_gold"
            android:textColor="@color/white"
            android:text="@string/register"/>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>