<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/add_event_name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name_header"
        />

    <EditText
        android:id="@+id/add_event_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/add_event_start_day_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_start_day_header"
        />

    <EditText
        android:id="@+id/add_event_start_day_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
         />

    <TextView
        android:id="@+id/add_event_end_day_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_end_day_header"
        />

    <EditText
        android:id="@+id/add_event_end_day_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        />

    <TextView
        android:id="@+id/add_event_start_time_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_start_time_header"
        />

    <EditText
        android:id="@+id/add_event_start_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        />

    <TextView
        android:id="@+id/add_event_end_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_end_time_header"
        />

    <EditText
        android:id="@+id/add_event_end_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        />

</LinearLayout>